--- a/index.html
+++ b/index.html
@@ -7,9 +7,10 @@
     <title>Otaku Lifts</title>
     <link rel="stylesheet" href="chatai.css">
     <link rel="icon" type="image/png" href="websiteassets\IMG_3233.PNG">
+    <script src="chatai.js"></script>
   </head>
   <body>
-	<script src="chatai.js"></script>
+	
 
       
       <div class="header">
@@ -28,6 +29,7 @@
           <a href="#about">About</a>
           <a href="#personal-training">Personal Training</a>
           <a href="#plan-section">Workout/Diet Plans</a>
+          <a href="#how-it-works">How It Works</a>
         </nav>
         <button class="contact-btn"><a href="#Contactus">Contact Us</a></button>
       </div>
@@ -90,6 +92,39 @@
           </div>
 
         </div>
+      </div>
+
+      <div id="how-it-works">
+        <h2>How It Works</h2>
+        <ul id="unlist">
+          <li>
+            <div class="step-boox">
+               <div class="step-number">1</div>
+               send an email to ericguttmann@otakulifts.in with your fitness goals
+            </div>
+            </li>
+
+            <li>
+              <div class="step-boox">
+                 <div class="step-number">2</div>
+                 choose the service that best suits you
+              </div>
+              </li>
+
+              <li>
+                <div class="step-boox">
+                   <div class="step-number">3</div>
+                   we send you an invoice/reciept to your email
+                </div>
+                </li>
+
+                <li>
+                  <div class="step-boox">
+                     <div class="step-number">4</div>
+                     GET SHREDDED AF!
+                  </div>
+                  </li>
+        </ul>
       </div>
 
       <section id="Contactus">
